fix ci python version to str

--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -12,7 +12,7 @@ env:
   ARTIFACT_RETENTION_DAYS: 7
   DOCKER_BUILDKIT: 1
   GO_VERSION: 1.18
-  PYTHON_VERSION: 3.10
+  PYTHON_VERSION: "3.10"
   PYTHON_VERSION_TAG: 310
   
 jobs:
