--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -13,7 +13,6 @@ env:
   DOCKER_BUILDKIT: 1
   GO_VERSION: 1.18
   PYTHON_VERSION: "3.10"
-  PYTHON_VERSION_TAG: 310
   
 jobs:
   create-version:
@@ -400,7 +399,7 @@ jobs:
         run: ./setup-cluster.sh merlin-cluster ${{ env.INGRESS_HOST }}
       - name: Deploy merlin and mlp
         working-directory: merlin/scripts/e2e
-        run: ./deploy-merlin.sh ${{ env.INGRESS_HOST }} ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }} ../../charts/merlin ${{ needs.create-version.outputs.version }} ${{ github.ref }} ${{ env.PYTHON_VERSION_TAG }}
+        run: ./deploy-merlin.sh ${{ env.INGRESS_HOST }} ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }} ../../charts/merlin ${{ needs.create-version.outputs.version }} ${{ github.ref }}
       - name: Run E2E Test
         timeout-minutes: 30
         id: run-e2e-test
