loosen numpy dependency for py3.10

--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -462,8 +462,9 @@ jobs:
     needs:
     - create-version
     - build-pyfunc-server #- e2e-test
+    - build-build-batch-predictor #To be removed
     - test-api
-    #- test-python-sdk
+    - test-python-sdk
     - test-pyfunc-server
     - test-batch-predictor
     with:
