--- a/examples/batch/env.yaml
+++ b/examples/batch/env.yaml
@@ -1,7 +1,7 @@
 dependencies:
 - pip:
     - joblib>=0.13.0,<1.2.0  # >=1.2.0 upon upgrade of kserve's version
-    - numpy==1.19.5
+    - numpy>=1.19.5
     - scikit-learn==1.0.2  # >=1.1.2 upon python 3.7 deprecation
     - xgboost==1.6.2
     - mlflow==1.23.0
