--- a/examples/pyfunc/requirements.txt
+++ b/examples/pyfunc/requirements.txt
@@ -1,4 +1,5 @@
 scikit-learn==1.0.2  # >=1.1.2 upon python 3.7 deprecation
+joblib>=0.13.0,<1.2.0  # >=1.2.0 upon upgrade of kserve's version
 xgboost==1.6.2
 merlin-sdk
 numpy
