--- a/python/batch-predictor/requirements.txt
+++ b/python/batch-predictor/requirements.txt
@@ -2,6 +2,6 @@ findspark
 pyspark==3.0.1
 mlflow>=1.2.0,<=1.23.0
 cloudpickle==2.0.0
-pyarrow>=0.14.1
+pyarrow>=0.14.1,<=9.0.0
 protobuf>=3.0,<4.0.0
 file:../sdk#egg=merlin-sdk
