--- a/charts/merlin/values-e2e.yaml
+++ b/charts/merlin/values-e2e.yaml
@@ -62,16 +62,18 @@ merlin:
     namespace: "mlp"
     timeout: "10m"
     kanikoImage: "gcr.io/kaniko-project/executor:v1.6.0"
-    baseImage: 
-      3.7.*: ""
-    dockerfilePath: "docker/Dockerfile"
-    predictionJobDockerfilePath: "docker/app.Dockerfile"
+    baseImages: 
+      3.7.*: 
+        imageName: pyfunc-py37:v0.1.0
+        dockerfilePath: "docker/Dockerfile"
+        buildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.19.0"
+    predictionJobBaseImages: 
+      3.7.*: 
+        imageName: pyspark-py37:v0.1.0
+        dockerfilePath: "docker/app.Dockerfile"
+        buildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.19.0"
     contextSubPath: "python/pyfunc-server"
     predictionJobContextSubPath: "python/batch-predictor"
-    buildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.19.0"
-    predictionJobBuildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.19.0"
-    predictionJobBaseImage: 
-      3.7.*: ghcr.io/gojek/merlin-pyspark-base:v0.4.1
     nodeSelectors: {}
     tolerations: []
 
