--- a/.env.sample
+++ b/.env.sample
@@ -17,11 +17,7 @@ NEWRELIC_APPNAME=merlin-api-dev
 NEWRELIC_IGNORESTATUSCODES=400,404
 
 # IMG_BUILDER_CLUSTER_NAME=
-# TODO: Set with GitHub path
-# IMG_BUILDER_BUILD_CONTEXT_URI=
-# IMG_BUILDER_PREDICTION_JOB_BUILD_CONTEXT_URI=
-IMG_BUILDER_PREDICTION_JOB_DOCKERFILE_PATH=docker/app.Dockerfile
-IMG_BUILDER_PREDICTION_JOB_BASE_IMAGE={"3.7.*":ghcr.io/gojek/merlin-pyspark-base:v0.7.0}
+IMG_BUILDER_PREDICTION_JOB_BASE_IMAGES={"3.7.*":{"imageName":ghcr.io/gojek/merlin-pyspark-base:v0.7.0,"dockerfilePath":docker/app.Dockerfile,"buildContextURI":""}}
 IMG_BUILDER_NAMESPACE=mlp
 IMG_BUILDER_DOCKER_REGISTRY=ghcr.io/gojek
 IMG_BUILDER_TIMEOUT=10m
