--- a/.env.sample
+++ b/.env.sample
@@ -17,6 +17,7 @@ NEWRELIC_APPNAME=merlin-api-dev
 NEWRELIC_IGNORESTATUSCODES=400,404
 
 # IMG_BUILDER_CLUSTER_NAME=
+IMG_BUILDER_PRED_HOME_DIR=/home/spark
 IMG_BUILDER_PREDICTION_JOB_BASE_IMAGES={"3.7.*":{"imageName":ghcr.io/gojek/merlin-pyspark-base:v0.7.0,"dockerfilePath":docker/app.Dockerfile,"buildContextURI":""}}
 IMG_BUILDER_NAMESPACE=mlp
 IMG_BUILDER_DOCKER_REGISTRY=ghcr.io/gojek
