--- a/charts/merlin/values-e2e.yaml
+++ b/charts/merlin/values-e2e.yaml
@@ -67,11 +67,13 @@ merlin:
         imageName: pyfunc-py37:v0.1.0
         dockerfilePath: "docker/Dockerfile"
         buildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.19.0"
+        mainAppPath: /merlin-spark-app/main.py
     predictionJobBaseImages: 
       3.7.*: 
         imageName: pyspark-py37:v0.1.0
         dockerfilePath: "docker/app.Dockerfile"
         buildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.19.0"
+        mainAppPath: /merlin-spark-app/main.py
     contextSubPath: "python/pyfunc-server"
     predictionJobContextSubPath: "python/batch-predictor"
     nodeSelectors: {}
