--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -50,11 +50,13 @@ merlin:
         imageName: pyfunc-py37:v0.1.0
         dockerfilePath: "docker/Dockerfile"
         buildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.1"
+        mainAppPath: /merlin-spark-app/main.py
     predictionJobBaseImages: 
       3.7.*: 
         imageName: pyspark-py37:v0.1.0
         dockerfilePath: "docker/app.Dockerfile"
         buildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.1"
+        mainAppPath: /merlin-spark-app/main.py
     namespace: "mlp"
     dockerRegistry: "gojek"
     timeout: "30m"
