--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -45,14 +45,14 @@ merlin:
 
   imageBuilder:
     clusterName: "dev"
-    baseImages: 
-      3.7.*: 
+    baseImages:
+      3.7.*:
         imageName: pyfunc-py37:v0.1.0
         dockerfilePath: "docker/Dockerfile"
         buildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.1"
         mainAppPath: /merlin-spark-app/main.py
-    predictionJobBaseImages: 
-      3.7.*: 
+    predictionJobBaseImages:
+      3.7.*:
         imageName: pyspark-py37:v0.1.0
         dockerfilePath: "docker/app.Dockerfile"
         buildContextURI: "git://github.com/gojek/merlin.git#refs/tags/v0.1"
@@ -118,7 +118,7 @@ merlin:
       #   is_using_direct_storage: false
       #   is_redis_cluster: true
       #   serving_url: "online-serving-redis.feast.dev"
-      #   redis_addresses: 
+      #   redis_addresses:
       #     - 10.1.1.2
       #     - 10.1.1.3
       #   pool_size: 5
@@ -138,9 +138,9 @@ merlin:
       #   pool_size: 5
       #   keep_alive_interval: "2m"
       #   keep_alive_timeout: "1m"
-      
+
       defaultFeastSource: BIGTABLE
-      bigtableCredential: 
+      bigtableCredential:
       coreURL: core.feast.dev
       coreAuthAudience: core.feast.dev
       authEnabled: false
@@ -218,12 +218,13 @@ merlin:
     mlp:
       apiHost: /api/v1
 
-    docsURL: [
-      {
-        "href": "https://github.com/gojek/merlin/blob/main/docs/getting-started/README.md",
-        "label": "Getting Started with Merlin",
-      },
-    ]
+    docsURL:
+      [
+        {
+          "href": "https://github.com/gojek/merlin/blob/main/docs/getting-started/README.md",
+          "label": "Getting Started with Merlin",
+        },
+      ]
 
     upiDocURL: "https://github.com/caraml-dev/universal-prediction-interface/blob/main/docs/api_markdown/caraml/upi/v1/index.md"
 
@@ -244,6 +245,11 @@ merlin-postgresql:
   postgresqlDatabase: merlin
   # The password secret will be created using this password
   postgresqlPassword: merlin
+
+  connMaxIdleTime: 0
+  connMaxLifetime: 0
+  maxIdleConns: 0
+  maxOpenConns: 0
 
   resources:
     requests:
