Add loging to debug error on model endpoint api

--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -246,8 +246,8 @@ merlin-postgresql:
   # The password secret will be created using this password
   postgresqlPassword: merlin
 
-  connMaxIdleTime: 0
-  connMaxLifetime: 0
+  connMaxIdleTime: 0s
+  connMaxLifetime: 0s
   maxIdleConns: 0
   maxOpenConns: 0
 
