Add DB configurations (#307)
<!--  Thanks for sending a pull request!  Here are some tips for you:

1. Run unit tests and ensure that they are passing
2. If your change introduces any API changes, make sure to update the
e2e tests
3. Make sure documentation is updated for your PR!

-->

**Which issue(s) this PR fixes**:
<!--
*Automatically closes linked issue when PR is merged.
Usage: `Fixes #<issue number>`, or `Fixes (paste link of issue)`.
-->

Fixes broken pipe from Merlin to DB

**Does this PR introduce a user-facing change?**:
<!--
If no, just write "NONE" in the release-note block below.
If yes, a release note is required. Enter your extended release note in
the block below.
If the PR requires additional action from users switching to the new
release, include the string "action required".

For more information about release notes, see kubernetes' guide here:
http://git.k8s.io/community/contributors/guide/release-notes.md
-->

```release-note

```

**Checklist**

- [ ] Added unit test, integration, and/or e2e tests
- [ ] Tested locally
- [ ] Updated documentation
- [ ] Update Swagger spec if the PR introduce API changes
- [ ] Regenerated Golang and Python client if the PR introduce API
changes

--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -82,6 +82,14 @@ spec:
                 key: postgresql-password
           - name: DATABASE_NAME
             value: {{ index .Values "merlin-postgresql" "postgresqlDatabase" }}
+          - name: DATABASE_CONN_MAX_IDLE_TIME
+            value: "{{ index .Values "merlin-postgresql" "connMaxIdleTime" }}"
+          - name: DATABASE_CONN_MAX_LIFETIME
+            value: "{{ index .Values "merlin-postgresql" "connMaxLifetime" }}"
+          - name: DATABASE_MAX_IDLE_CONNS
+            value: "{{ index .Values "merlin-postgresql" "maxIdleConns" }}"
+          - name: DATABASE_MAX_OPEN_CONNS
+            value: "{{ index .Values "merlin-postgresql" "maxOpenConns" }}"
           - name: REACT_APP_OAUTH_CLIENT_ID
             value: "{{ .Values.merlin.ui.oauthClientID }}"
           - name: REACT_APP_ENVIRONMENT
