--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -1,19 +1,18 @@
 name: Merlin CI Workflow
 on:
   push:
-    branches: 
-    - main 
+    branches:
+      - main
     tags:
-    - v*
+      - v*
   pull_request:
-
 
 env:
   ARTIFACT_RETENTION_DAYS: 7
   DOCKER_BUILDKIT: 1
   GO_VERSION: 1.18
   PYTHON_VERSION: "3.10"
-  
+
 jobs:
   create-version:
     runs-on: ubuntu-latest
@@ -59,7 +58,7 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: ~/.local/share/virtualenvs
-          key: ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-pipenv-batch-predictor
+          key: ${{ runner.os }}-python-${{ matrix.python-version }}-pipenv-batch-predictor
       - name: Install dependencies
         working-directory: ./python/batch-predictor
         run: |
@@ -89,7 +88,7 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: ~/.local/share/virtualenvs
-          key: ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-pipenv-pyfunc-server
+          key: ${{ runner.os }}-python-${{ matrix.python-version }}-pipenv-pyfunc-server
       - name: Install dependencies
         working-directory: ./python/pyfunc-server
         run: |
@@ -119,11 +118,11 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: ~/.local/share/virtualenvs
-          key: ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-pipenv-python-sdk
+          key: ${{ runner.os }}-python-${{ matrix.python-version }}-pipenv-python-sdk
       - name: Install dependencies
         working-directory: ./python/sdk
         run: |
-          pip install mypy==0.812 pipenv==2022.8.19
+          pip install pipenv
           make setup
       - name: Unit test Python SDK
         env:
@@ -236,8 +235,8 @@ jobs:
         ports:
           - 5432:5432
     needs:
-    - build-ui
-    - create-version
+      - build-ui
+      - create-version
     steps:
       - uses: actions/checkout@v2
       - name: Download UI Dist
@@ -332,7 +331,7 @@ jobs:
 
   e2e-test:
     runs-on: ubuntu-latest
-    needs: 
+    needs:
       - build-api
       - build-batch-predictor
       - build-pyfunc-server
@@ -367,7 +366,7 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: ~/.local/share/virtualenvs
-          key: ${{ runner.os }}-python-${{ steps.setup-python.outputs.python-version }}-pipenv-${{ hashFiles('Pipfile.lock') }}
+          key: ${{ runner.os }}-python-${{ matrix.python-version }}-pipenv-${{ hashFiles('Pipfile.lock') }}
       - name: Download API Docker Artifact
         uses: actions/download-artifact@v2
         with:
@@ -378,7 +377,7 @@ jobs:
           name: merlin-transformer.${{ needs.create-version.outputs.version }}.tar
       - name: Download k3d
         run: |
-            curl --silent --fail https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | TAG=v5.4.1 bash
+          curl --silent --fail https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | TAG=v5.4.1 bash
       - name: "Create Test Cluster"
         run: |
           k3d registry create $LOCAL_REGISTRY --port $LOCAL_REGISTRY_PORT
@@ -416,7 +415,7 @@ jobs:
           echo "::group::Get deployment  merlin-e2e namespace"
           kubectl get deployment -n merlin-e2e
           echo "::endgroup::"
-          
+
           echo "::group::Describe deployment merlin-e2e namespace"
           kubectl describe deployment -n merlin-e2e
           echo "::endgroup::"
@@ -432,11 +431,11 @@ jobs:
           echo "::group::Get Inference Service  merlin-e2e namespace"
           kubectl get isvc -n merlin-e2e
           echo "::endgroup::"
-          
+
           echo "::group::Merlin log"
           kubectl logs deploy/merlin -n mlp -c merlin
           echo "::endgroup::"
-          
+
           echo "::group::KServe log"
           kubectl logs statefulset/kserve-controller-manager -n kserve -c manager
           echo "::endgroup::"
@@ -460,12 +459,12 @@ jobs:
   release:
     uses: ./.github/workflows/release.yml
     needs:
-    - create-version
-    - e2e-test
-    - test-api
-    - test-python-sdk
-    - test-pyfunc-server
-    - test-batch-predictor
+      - create-version
+      - e2e-test
+      - test-api
+      - test-python-sdk
+      - test-pyfunc-server
+      - test-batch-predictor
     with:
       version: ${{ needs.create-version.outputs.version }}
     secrets:
