--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -332,25 +332,21 @@ jobs:
   e2e-test:
     runs-on: ubuntu-latest
     needs:
-      - build-api
-      - build-batch-predictor
-      - build-pyfunc-server
-      - build-transformer
+    #   - build-api
+    #   - build-batch-predictor
+    #   - build-pyfunc-server
+    #   - build-transformer
       - create-version
     env:
       K3D_CLUSTER: merlin-cluster
       LOCAL_REGISTRY_PORT: 12345
       LOCAL_REGISTRY: "dev.localhost"
       INGRESS_HOST: "127.0.0.1.nip.io"
+      MLP_CHART_VERSION: 0.3.3
     steps:
       - uses: actions/checkout@v2
         with:
           path: merlin
-      - uses: actions/checkout@master
-        with:
-          repository: gojek/mlp
-          ref: v1.7.4
-          path: merlin/scripts/e2e/mlp
       - uses: actions/setup-go@v2
         with:
           go-version: ${{ env.GO_VERSION }}
@@ -398,7 +394,7 @@ jobs:
         run: ./setup-cluster.sh merlin-cluster ${{ env.INGRESS_HOST }}
       - name: Deploy merlin and mlp
         working-directory: merlin/scripts/e2e
-        run: ./deploy-merlin.sh ${{ env.INGRESS_HOST }} ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }} ../../charts/merlin ${{ needs.create-version.outputs.version }} ${{ github.ref }}
+        run: ./deploy-merlin.sh ${{ env.INGRESS_HOST }} ${{ env.LOCAL_REGISTRY }}:${{ env.LOCAL_REGISTRY_PORT }} ../../charts/merlin ${{ needs.create-version.outputs.version }} ${{ github.ref }} ${{ env.MLP_CHART_VERSION }}
       - name: Run E2E Test
         timeout-minutes: 30
         id: run-e2e-test
