Add liveness probe for grpc

--- a/python/pyfunc-server/requirements.txt
+++ b/python/pyfunc-server/requirements.txt
@@ -10,4 +10,5 @@ caraml-upi-protos
 grpcio<1.49.0
 grpcio-reflection<1.49.0
 grpcio-tools<1.49.0
+grpcio-health-checking<1.49.0
 file:${SDK_PATH}#egg=merlin-sdk
