--- a/.env.sample
+++ b/.env.sample
@@ -17,7 +17,7 @@ NEWRELIC_APPNAME=merlin-api-dev
 NEWRELIC_IGNORESTATUSCODES=400,404
 
 # IMG_BUILDER_CLUSTER_NAME=
-IMG_BUILDER_PREDICTION_JOB_BASE_IMAGES={"3.7.*":{"imageName":ghcr.io/gojek/merlin-pyspark-base:v0.7.0,"dockerfilePath":docker/app.Dockerfile,"buildContextURI":"","mainAppPath":"/merlin-spark-app/main.py"}}
+IMG_BUILDER_PREDICTION_JOB_BASE_IMAGES={"3.7.*":{"imageName":"ghcr.io/gojek/merlin-pyspark-base:v0.7.0","dockerfilePath":"docker/app.Dockerfile","buildContextURI":"","mainAppPath":"/merlin-spark-app/main.py"}}
 IMG_BUILDER_NAMESPACE=mlp
 IMG_BUILDER_DOCKER_REGISTRY=ghcr.io/gojek
 IMG_BUILDER_TIMEOUT=10m
@@ -46,7 +46,7 @@ MONITORING_DASHBOARD_JOB_BASE_URL=http://monitoring.dev/batch-job-dashboard
 
 # WARDEN_API_HOST=
 
-# MLP_API_HOST=
+MLP_API_HOST=https://caraml.dev/mlp
 MLP_API_ENCRYPTION_KEY=password
 
 # MLFLOW_TRACKING_URL=
@@ -57,3 +57,12 @@ JAEGER_AGENT_PORT=6831
 JAEGER_SAMPLER_TYPE=const
 JAEGER_SAMPLER_PARAM=1
 JAEGER_DISABLED=false
+
+STANDARD_TRANSFORMER_IMAGE_NAME=ghcr.io/gojek/merlin-transformer:0.25.0
+
+FEAST_SERVING_URLS=[{"host": "https://caraml.dev/feast"}]
+FEAST_CORE_URL=https://caraml.dev/feast
+FEAST_CORE_AUTH_AUDIENCE=false
+SIMULATION_FEAST_REDIS_URL=https://caraml.dev/feast/redis
+SIMULATION_FEAST_BIGTABLE_URL=https://caraml.dev/feast/bigtable
+MLFLOW_TRACKING_URL=https://caraml.dev/mlflow
