--- a/environment.yaml
+++ b/environment.yaml
@@ -26,3 +26,14 @@
     max_replica: 1
     cpu_request: "500m"
     memory_request: "500Mi"
+  k8s_config:
+    name: id-dev
+    cluster:
+      server: id-dev.k8s-cluster
+      insecure-skip-tls-verify: true
+    user:
+      exec:
+        apiVersion: client.authentication.k8s.io/v1beta1
+        command: gke-gcloud-auth-plugin
+        interactiveMode: IfAvailable
+        provideClusterInfo: true
