--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -11,7 +11,6 @@ env:
   ARTIFACT_RETENTION_DAYS: 7
   DOCKER_BUILDKIT: 1
   GO_VERSION: 1.18
-  PYTHON_VERSION: "3.10"
 
 jobs:
   create-version:
@@ -343,6 +342,7 @@ jobs:
       LOCAL_REGISTRY: "dev.localhost"
       INGRESS_HOST: "127.0.0.1.nip.io"
       MLP_CHART_VERSION: 0.3.4
+      E2E_PYTHON_VERSION: "3.10"
     steps:
       - uses: actions/checkout@v2
         with:
@@ -352,7 +352,7 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
       - uses: actions/setup-python@v2
         with:
-          python-version: ${{ env.PYTHON_VERSION }}
+          python-version: ${{ env.E2E_PYTHON_VERSION }}
       - uses: actions/cache@v3
         with:
           path: ~/.cache/pip
@@ -399,7 +399,7 @@ jobs:
         timeout-minutes: 30
         id: run-e2e-test
         working-directory: merlin/scripts/e2e
-        run: ./run-e2e.sh ${{ env.INGRESS_HOST }} ${{ env.PYTHON_VERSION }}
+        run: ./run-e2e.sh ${{ env.INGRESS_HOST }} ${{ env.E2E_PYTHON_VERSION }}
       - name: "Debug"
         if: always()
         continue-on-error: true
