Use python -m  for all pipenv commands

--- a/python/pyfunc-server/Makefile
+++ b/python/pyfunc-server/Makefile
@@ -1,18 +1,18 @@
 
 .PHONY: dev_install
 dev_install:
-	pipenv install --skip-lock -e .[test]
+	python -m pipenv install --skip-lock -e .[test]
 
 .PHONY: setup
 setup: dev_install
 
 .PHONY: test
 test: type_check
-	pipenv run pytest -W ignore -s
+	python -m pipenv run pytest -W ignore -s
 
 .PHONY: type_check
 type_check:
-	pipenv run mypy --ignore-missing-imports pyfuncserver
+	python -m pipenv run mypy --ignore-missing-imports pyfuncserver
 
 .PHONY: benchmark
 benchmark:
