--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -68,6 +68,7 @@ jobs:
         working-directory: ./python/batch-predictor
         run: |
           python -m pip install pipenv
+          env | grep PIPENV
           make setup
       - name: Run batch-predictor test
         working-directory: ./python/batch-predictor
