--- a/charts/merlin/templates/merlin-config-secret.yaml
+++ b/charts/merlin/templates/merlin-config-secret.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
   namespace: {{ .Release.Namespace }}
   name: {{ template "merlin.fullname" .}}-environments
@@ -10,8 +10,13 @@ metadata:
     app.kubernetes.io/name: {{ include "merlin.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-data:
+stringData:
   environment.yaml: |-
 {{- if .Values.merlin.environmentConfigs }}
 {{ toYaml .Values.merlin.environmentConfigs | indent 4 }}
 {{- end }}
+  imageBuilderK8sConfig: |-
+{{- if .Values.merlin.imageBuilder.k8sConfig }}
+{{ .Values.merlin.imageBuilder.k8sConfig | b64dec | indent 4 }}
+{{- end }}
+    
