Pin Numpy version

--- a/python/pyfunc-server/Makefile
+++ b/python/pyfunc-server/Makefile
@@ -1,18 +1,18 @@
 
 .PHONY: dev_install
 dev_install:
-	python -m pipenv install --skip-lock -e .[test] --verbose
+	pipenv install --skip-lock -e .[test] --verbose
 
 .PHONY: setup
 setup: dev_install
 
 .PHONY: test
 test: type_check
-	python -m pipenv run pytest -W ignore -s
+	pipenv run pytest -W ignore -s
 
 .PHONY: type_check
 type_check:
-	python -m pipenv run mypy --ignore-missing-imports pyfuncserver
+	pipenv run mypy --ignore-missing-imports pyfuncserver
 
 .PHONY: benchmark
 benchmark:
