--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -60,20 +60,11 @@ jobs:
         with:
           path: ~/.local/share/virtualenvs
           key: ${{ runner.os }}-python-${{ matrix.python-version }}-pipenv-batch-predictor
-      - name: Check Python version
-        working-directory: ./python/batch-predictor
-        run: |
-          python -V
-          pip -V
-          which python
-          which pip
-          make which-python
       - name: Install dependencies
         working-directory: ./python/batch-predictor
         run: |
-          python -m pip install pipenv
-          env
-          pipenv install --skip-lock -e .[test]
+          pip install pipenv
+          make setup
       - name: Run batch-predictor test
         working-directory: ./python/batch-predictor
         run: make unit-test
