Fix k8sConfig typo in e2e tests

--- a/charts/merlin/templates/merlin-config-secret.yaml
+++ b/charts/merlin/templates/merlin-config-secret.yaml
@@ -1,3 +1,5 @@
+# Secret is created only if mlp envconfig secret not set
+{{- if not .Values.mlp.environmentConfigSecret.name }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -19,4 +21,4 @@ stringData:
 {{- if .Values.merlin.imageBuilder.k8sConfig }}
 {{ .Values.merlin.imageBuilder.k8sConfig | b64dec | indent 4 }}
 {{- end }}
-    
+{{- end }}
