Modify merlin setup script, secrets template
* Do not take in base64 encoded string, instead use full json

--- a/charts/merlin/templates/merlin-environments-secret.yaml
+++ b/charts/merlin/templates/merlin-environments-secret.yaml
@@ -19,6 +19,6 @@ stringData:
 {{- end }}
   imageBuilderK8sConfig: |-
 {{- if .Values.merlin.imageBuilder.k8sConfig }}
-{{ .Values.merlin.imageBuilder.k8sConfig | b64dec | indent 4 }}
+{{ .Values.merlin.imageBuilder.k8sConfig | indent 4 }}
 {{- end }}
 {{- end }}
