--- a/charts/merlin/values.yaml
+++ b/charts/merlin/values.yaml
@@ -67,6 +67,7 @@ merlin:
     tolerations: []
     nodeSelectors: {}
     maxRetry: 3
+    k8sConfig: ""
 
   gitlab:
     baseURL: https://gitlab.com/
