Setup changes to pass e2e
* Reduce kserve memory requirements
* Add sleep after installing knative
* Add more logs

--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -410,12 +410,12 @@ jobs:
         if: always()
         continue-on-error: true
         run: |
-          echo "::group::Get deployment mlp namespace"
-          kubectl get deployment -n mlp
+          echo "::group::Get cert manager logs"
+          kubectl logs deploy/cert-manager -n cert-manager
           echo "::endgroup::"
 
-          echo "::group::Get deployment  merlin-e2e namespace"
-          kubectl get deployment -n merlin-e2e
+          echo "::group::Get deployment mlp namespace"
+          kubectl get deployment -n mlp
           echo "::endgroup::"
 
           echo "::group::Describe pods mlp namespace"
@@ -426,16 +426,20 @@ jobs:
           kubectl describe deployment -n merlin-e2e
           echo "::endgroup::"
 
-          echo "::group::Get Pod  merlin-e2e namespace"
-          kubectl get pod -n merlin-e2e
+          echo "::group::Get deployment merlin-e2e namespace"
+          kubectl get deployment -n merlin-e2e
           echo "::endgroup::"
 
-          echo "::group::Describe Pod  merlin-e2e namespace"
+          echo "::group::Get Pod  merlin-e2e namespace"
+          kubectl get pod -n merlin-e2e -o yaml
+          echo "::endgroup::"
+
+          echo "::group::Describe Pod merlin-e2e namespace"
           kubectl describe pod -n merlin-e2e
           echo "::endgroup::"
 
-          echo "::group::Get Inference Service  merlin-e2e namespace"
-          kubectl get isvc -n merlin-e2e
+          echo "::group::Get Inference Service merlin-e2e namespace"
+          kubectl get isvc -n merlin-e2e -o yaml
           echo "::endgroup::"
 
           echo "::group::Get events merlin-e2e namespace"
@@ -446,20 +450,16 @@ jobs:
           kubectl logs deploy/merlin -n mlp -c merlin
           echo "::endgroup::"
 
-          echo "::group::Mlflow logs"
-          kubectl logs deploy/merlin-mlflow -n mlp -c merlin-mlflow
-          echo "::endgroup::"
-
           echo "::group::Get kserve pods"
           kubectl get pods -n kserve -o yaml
           echo "::endgroup::"
 
-          echo "::group::Get cert manager logs"
-          kubectl logs deploy/cert-manager -n cert-manager
-          echo "::endgroup::"
-
           echo "::group::KServe log"
           kubectl logs statefulset/kserve-controller-manager -n kserve -c manager
+          echo "::endgroup::"
+
+          echo "::group::KServe events"
+          kubectl get events -n kserve
           echo "::endgroup::"
 
           echo "::group::Knative log"
