Remove vault dependency (#331)
<!--  Thanks for sending a pull request!  Here are some tips for you:

1. Run unit tests and ensure that they are passing
2. If your change introduces any API changes, make sure to update the
e2e tests
3. Make sure documentation is updated for your PR!

-->

**What this PR does / why we need it**:
* This PR removes the dependency on vault. Clusters are accessed via
configuration passed at runtime.
* https://github.com/gojek/mlp/pull/74 should be merged first before
merging
* The changes related to deprecating vault dependencies are in these
dirs:
  * `cluster`
  * `cmd/api`
  * `config`
  * `istio`
  * `charts/merlin`
* The `gke-gcloud-auth-plugin` binary is added to the Dockerfile, this
is allow access to GKE clusters without providing static credentials.

### Setup changes
To configure access to model clusters, the `environments.yaml` has a new
field `k8s_config`:
```yaml
- name: id-dev
  ...
  k8s_config:
    name: id-dev
    cluster:
      server: id-dev.k8s-cluster
      insecure-skip-tls-verify: true
    user:
      exec:
        apiVersion: client.authentication.k8s.io/v1beta1
        command: gke-gcloud-auth-plugin
        interactiveMode: IfAvailable
        provideClusterInfo: true
```
The cluster and user fields correspond to the
[Cluster](https://pkg.go.dev/k8s.io/client-go/tools/clientcmd/api/v1#Cluster)
struct and
[AuthInfo](https://pkg.go.dev/k8s.io/client-go/tools/clientcmd/api/v1#AuthInfo)
struct defined in client-go clientcmd/api/v1 package.

To configure access to the Imagebuilder cluster, there is a new
environment variable `IMG_BUILDER_K8S_CONFIG` which takes a json object
of the same format as what's passed into the `k8s_config` field in
`environments.yaml`:
```
IMG_BUILDER_K8S_CONFIG='{"name":"id-dev","cluster":{"server":"id-dev.k8s.cluster","insecure-skip-tls-verify":true},"user":{"exec":{"apiVersion":"client.authentication.k8s.io/v1beta1","command":"gke-gclou

--- a/charts/merlin/templates/merlin-environments-secret.yaml
+++ b/charts/merlin/templates/merlin-environments-secret.yaml
@@ -1,5 +1,7 @@
+# Secret is created only if mlp envconfig secret not set
+{{- if not .Values.mlp.environmentConfigSecret.name }}
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
   namespace: {{ .Release.Namespace }}
   name: {{ template "merlin.fullname" .}}-environments
@@ -10,8 +12,13 @@ metadata:
     app.kubernetes.io/name: {{ include "merlin.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-data:
+stringData:
   environment.yaml: |-
 {{- if .Values.merlin.environmentConfigs }}
 {{ toYaml .Values.merlin.environmentConfigs | indent 4 }}
+{{- end }}
+  imageBuilderK8sConfig: |-
+{{- if .Values.merlin.imageBuilder.k8sConfig }}
+{{ .Values.merlin.imageBuilder.k8sConfig | indent 4 }}
+{{- end }}
 {{- end }}
