--- a/charts/merlin/templates/merlin-deployment.yaml
+++ b/charts/merlin/templates/merlin-deployment.yaml
@@ -136,6 +136,16 @@ spec:
             value: {{ .Values.merlin.imageBuilder.nodeSelectors | toJson | quote }}
           - name: IMG_BUILDER_MAX_RETRY
             value: "{{ .Values.merlin.imageBuilder.maxRetry }}"
+          - name: IMG_BUILDER_K8S_CONFIG
+            valueFrom:
+              secretKeyRef:
+                {{- if .Values.mlp.environmentConfigSecret.name }}
+                name: {{ .Values.mlp.environmentConfigSecret.name }}
+                key: {{ .Values.mlp.environmentConfigSecret.imageBuilderKey }}
+                {{- else }}
+                name: {{ template "merlin.fullname" . }}-environments
+                key: imageBuilderK8sConfig
+                {{- end }}
           {{- if .Values.merlin.imageBuilder.contextSubPath }}
           - name: IMG_BUILDER_CONTEXT_SUB_PATH
             value: "{{ .Values.merlin.imageBuilder.contextSubPath }}"
@@ -184,18 +194,8 @@ spec:
             value: "{{ .Values.merlin.transformer.jaeger.samplerParam }}"
           - name: JAEGER_DISABLED
             value: "{{ .Values.merlin.transformer.jaeger.disabled }}"
-          - name: VAULT_ADDRESS
-            valueFrom:
-              secretKeyRef:
-                name: "{{ .Values.merlin.vault.secretName }}"
-                key: address
-          - name: VAULT_TOKEN
-            valueFrom:
-              secretKeyRef:
-                name: "{{ .Values.merlin.vault.secretName }}"
-                key: token
           - name: DEPLOYMENT_CONFIG_PATH
-            value: "/opt/config/environment.yaml"
+            value: {{ ternary (printf "/opt/config/%s" "environment.yaml") (printf "/opt/config/%s" .Values.mlp.environmentConfigSecret.envKey) (eq .Values.mlp.environmentConfigSecret.name "")}}
           {{ if .Values.merlin.sentry.enabled }}
           - name: SENTRY_ENABLED
             value: "{{ .Values.merlin.sentry.enabled }}"
@@ -311,11 +311,10 @@ spec:
             echo "Running Swagger UI..."
             /usr/share/nginx/run.sh
       {{- end }}
-
       volumes:
       - name: config
-        configMap:
-          name: {{ template "merlin.fullname" .}}-environments
+        secret:
+          secretName: {{ template "merlin.environmentsSecretName" . }}
       {{- if .Values.merlin.gcpServiceAccount }}
       - name: gcp-service-account
         secret:
