Add gRPC client keep alive

--- a/api/cmd/transformer/.env.sample
+++ b/api/cmd/transformer/.env.sample
@@ -17,6 +17,9 @@ FEAST_BATCH_SIZE=50
 FEAST_CACHE_TTL=60s
 FEAST_CACHE_ENABLED=false
 FEAST_HYSTRIX_RETRY_COUNT=5
+FEAST_SERVING_KEEP_ALIVE_ENABLED=true
+FEAST_SERVING_KEEP_ALIVE_TIME=2m
+FEAST_SERVING_KEEP_ALIVE_TIMEOUT=1s
 
 HTTP_SERVER_TIMEOUT=30s
 HTTP_CLIENT_TIMEOUT=15s
